WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
202712
[iOS] REGRESSION (
r250398
) Layout Test fast/history/page-cache-element-state-focused.html is failing
https://bugs.webkit.org/show_bug.cgi?id=202712
Summary
[iOS] REGRESSION (r250398) Layout Test fast/history/page-cache-element-state-...
Chris Dumez
Reported
2019-10-08 16:59:23 PDT
fast/history/page-cache-element-state-focused.html is failing on internal bots.
Attachments
WIP Patch
(2.00 KB, patch)
2019-10-08 17:01 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(3.40 KB, patch)
2019-10-08 18:30 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-10-08 16:59:40 PDT
<
rdar://problem/56082428
>
Chris Dumez
Comment 2
2019-10-08 17:01:24 PDT
Created
attachment 380481
[details]
WIP Patch Needs change log.
Chris Dumez
Comment 3
2019-10-08 18:30:35 PDT
Created
attachment 380490
[details]
Patch
WebKit Commit Bot
Comment 4
2019-10-09 07:38:52 PDT
Comment on
attachment 380490
[details]
Patch Clearing flags on attachment: 380490 Committed
r250912
: <
https://trac.webkit.org/changeset/250912
>
WebKit Commit Bot
Comment 5
2019-10-09 07:38:54 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 6
2019-10-09 09:45:21 PDT
Comment on
attachment 380490
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=380490&action=review
> Source/WebCore/css/CSSDefaultStyleSheets.cpp:96 > +static const char* simpleUserAgentStyleSheet = "html,body,div{display:block}" CSS_DARK_MODE_ADDITION "head{display:none}body{margin:8px}div:focus,span:focus,a:focus{outline:auto " DEFAULT_OUTLINE_WIDTH " -webkit-focus-ring-color}a:any-link{color:-webkit-link;text-decoration:underline}a:any-link:active{color:-webkit-activelink}";
Tiny nitpick: There’s not enough const here. This declares a constant string, and a non-constant global variable that starts out pointing to it; but we don’t need to change the value of that global variable. We should add another const or constexpr so the pointer itself is constant too, not just the string contents. Or could use a constant array instead of a pointer to a string; I think that is a little smaller.
Chris Dumez
Comment 7
2019-10-09 10:27:35 PDT
(In reply to Darin Adler from
comment #6
)
> Comment on
attachment 380490
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=380490&action=review
> > > Source/WebCore/css/CSSDefaultStyleSheets.cpp:96 > > +static const char* simpleUserAgentStyleSheet = "html,body,div{display:block}" CSS_DARK_MODE_ADDITION "head{display:none}body{margin:8px}div:focus,span:focus,a:focus{outline:auto " DEFAULT_OUTLINE_WIDTH " -webkit-focus-ring-color}a:any-link{color:-webkit-link;text-decoration:underline}a:any-link:active{color:-webkit-activelink}"; > > Tiny nitpick: There’s not enough const here. This declares a constant > string, and a non-constant global variable that starts out pointing to it; > but we don’t need to change the value of that global variable. We should add > another const or constexpr so the pointer itself is constant too, not just > the string contents. Or could use a constant array instead of a pointer to a > string; I think that is a little smaller.
Landed a follow-up fix in <
https://trac.webkit.org/changeset/250916
> thanks. I opted for "static const char simpleUserAgentStyleSheet[]".
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug